# yapnet

./: .gitignore  Cargo.toml  README.md  go.mod  main.go  shell.nix  test.lua
client/: basic_client.js  index.html
examples/reference-client/: Cargo.toml  \
examples/reference-client/src/: app.rs  event.rs  handler.rs  main.rs  tui.rs  ui.rs
protocol/: client_actions.go  handshake.go  message.go  msg_type.go
server/: chat.go  connection.go  handler.go  seq.go  server.go  state.go
src/: main.rs  protocol.rs  server.rs  state.rs
src/lua/: mod.rs  server_api.rs
static/: index.html  readme.md
yapnet_client/: Cargo.toml
yapnet_client/src/: lib.rs
yapnet_core/: Cargo.toml
yapnet_core/src/: error.rs  lib.rs  prelude.rs  state.rs
yapnet_core/src/game/: chat.rs  history.rs  mod.rs  user.rs
yapnet_core/src/lua/: mod.rs
yapnet_core/src/lua/yapi/: mod.rs
yapnet_core/src/models/: chat.rs  history.rs  mod.rs  user.rs
yapnet_core/src/protocol/: body.rs  message.rs  mod.rs
yapnet_macro/: Cargo.toml
yapnet_macro/src/: lib.rs
yapnet_server/: Cargo.toml
yapnet_server/src/: error.rs  lua.rs  main.rs  server.rs  state.rs
yapnet_server/src/lua/: lua_api.rs
yapnet_server/src/state/: mod.rs
