[package]
name = "yapnet_core"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.10.0", features = ["serde", "v4"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
mlua = { version = "0.9.9", features = ["lua54", "vendored", "macros", "async", "serialize"] }
