[package]
name = "yapnet"
version = "0.1.0"
edition = "2021"

[dependencies]
yapnet_core = { path="../yapnet_core"} 
axum = { version = "0.7.5", features= ["ws"]}
futures-util = "0.3.30"
mlua = { version = "0.9.9", features = ["lua54", "vendored", "macros", "async", "serialize"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = {version = "1.39.2", features = ["full"]  }
tower-http = { version = "0.5.2", features = ["fs"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
